2024-08-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* DESCRIPTION (Authors@R): Added

2024-07-14  Dirk Eddelbuettel  <edd@debian.org>

	* README.md (package): Switch some URLs from http to https

2024-07-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.7

	* inst/rmarkdown/templates/metropolis/resources/template.tex:
	Define `pandocunbounded` now needed by pandoc (>= 3.2.1)

	* DESCRIPTION (Imports): Add `codetools` now needed too
	* NAMESPACE: Also import `codetools`

	* README.md: Update several URLs

2024-06-14  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to r-ci-setup action

2024-05-18  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-01-05  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4

2022-10-31  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2021-11-05  Dirk Eddelbuettel  <edd@debian.org>

 	* README.md: Remove Travis badge
	* .travis.yml: Remove Travis YAML config

2021-03-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Add package page to URL entry

2020-12-25  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Small tweaks to CI YAML file

2020-12-19  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new CI badge

2020-06-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.6

	* .travis.yml: Switch to bionic and R 4.0.0

2020-06-08  Joseph Stachelek  <stachel2@msu.edu>

	* R/binb.R: Update natbib default from 'none' to 'default' to please
	current rmarkdown package

2020-04-08  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add 'last commit' badge

2019-12-17  Andras Svraka <svraka.andras@gmail.com>
